# gamp

./: .clang-tidy  .clangd  .cproject  .gitignore  .gitmodules  .project  CHANGES.md  CMakeLists.txt  CMakePresets.json  COPYING  Doxyfile.cpp.in  README.md  WasmSetup.cmake
cmake/modules/: Version.cpp.in  clangd.in  version.cpp.in
demos/: GLLauncher01.hpp  GearsES2.hpp  Launcher01.hpp  RedSquareES2.hpp
demos/graph/testshapes/: Glyph02UbuntuLight_ae.hpp  Glyph03FreeMonoRegular_M.hpp  Glyph05FreeSerifBoldItalic_ae.hpp
doc/: 20250305-GampIntro01.html  20251102-Gamp-GraphShape01.html  20251113-Gamp-SolInSpace.html  20260125-Gamp-CobraMK3-001.html  Doxyfile.cpp.in
doc/web/: 20250305-GampIntro01.html  20251102-Gamp-GraphShape01.html  20251113-Gamp-SolInSpace.html  20260125-Gamp-CobraMK3-001.html  rescale_to_device.js  video_style.css
examples/: CMakeLists.txt  GearsES2.cpp  GearsES2.html  GraphShapes01.cpp  GraphShapes02.cpp  HTMLLauncher01.html  Primitives01.cpp  Primitives02.cpp  Primitives03.cpp  PrimitivesCobraMK3.cpp  PrimitivesCobraMK3.html  RedSquare01.cpp  RedSquareES2.cpp  SolInSpace.cpp  SolInSpace.html  model_cobramk3.hpp  redsquare01.cpp  redsquare01.html  style.css
include/gamp/: Gamp.hpp  GampTypes.hpp  Version.hpp  gamp.hpp  gamp_types.hpp  version.hpp
include/gamp/av/: PTS.hpp  TimeFrameI.hpp
include/gamp/graph/: Graph.hpp  Outline.hpp  OutlineShape.hpp  PrimTypes.hpp  VertexMath.hpp
include/gamp/graph/gl/: GLUTesselator.hpp
include/gamp/graph/impl/: VertexMath.hpp
include/gamp/graph/tess/: CDTriangulator2D.hpp
include/gamp/graph/tess/gl/: GLUTesselator.hpp
include/gamp/graph/tess/impl/: CDTriangulator2D.hpp  GraphOutline.hpp  GraphVertex.hpp  HEdge.hpp  Loop.hpp
include/gamp/render/: RenderContext.hpp  RenderTypes.hpp
include/gamp/render/gl/: GLCapabilities.hpp  GLContext.hpp  GLHeader.hpp  GLLiterals.hpp  GLProfile.hpp  GLTypes.hpp  GLVersionNum.hpp  GLmisc.hpp  glheader.hpp  glliterals.hpp  glmisc.hpp  glprofile.hpp  gltypes.hpp
include/gamp/render/gl/data/: GLArrayData.hpp  GLArrayDataClient.hpp  GLArrayDataProxy.hpp  GLArrayDataServer.hpp  GLBuffers.hpp  GLMappedBuffer.hpp  GLUniformData.hpp  glarraydata.hpp  glarraydataclient.hpp  glarraydataproxy.hpp  glarraydataserver.hpp  glbuffers.hpp  glmappedbuffer.hpp  gluniformdata.hpp
include/gamp/render/gl/data/impl/: GLArrayHandler.hpp  GLDataArrayHandler.hpp  GLSLArrayHandler.hpp  GLSLArrayHandlerInterleaved.hpp  GLSLSubArrayHandler.hpp  GLSubArrayHandler.hpp  glarrayhandler.hpp  gldataarrayhandler.hpp  glslarrayhandler.hpp  glslarrayhandlerinterleaved.hpp  glslsubarrayhandler.hpp  glsubarrayhandler.hpp
include/gamp/render/gl/glsl/: ShaderCode.hpp  ShaderProgram.hpp  ShaderState.hpp  ShaderUtil.hpp  shadercode.hpp  shaderprogram.hpp  shaderstate.hpp  shaderutil.hpp
include/gamp/render/gl/glsl/util/: TextureRaster.hpp  textureraster.hpp
include/gamp/renderer/gl/: glarraydata.hpp  glheader.hpp  glliterals.hpp  glmisc.hpp  glprofile.hpp  gltypes.hpp  glversionnum.hpp
include/gamp/renderer/gl/data/: glarraydata.hpp  glarraydataclient.hpp  glarraydataproxy.hpp  glarraydataserver.hpp  glbuffers.hpp  glmappedbuffer.hpp  gluniformdata.hpp
include/gamp/renderer/gl/data/impl/: glarrayhandler.hpp  gldataarrayhandler.hpp  glslarrayhandler.hpp  glslarrayhandlerinterleaved.hpp  glslsubarrayhandler.hpp  glsubarrayhandler.hpp
include/gamp/renderer/gl/glsl/: shadercode.hpp  shaderprogram.hpp  shaderstate.hpp  shaderutil.hpp
include/gamp/renderer/gl/glsl/util/: textureraster.hpp
include/gamp/renderer/gl/util/: glarraydatamutable.hpp  glarraydatawrapper.hpp  glbuffers.hpp
include/gamp/wt/: Capabilities.hpp  Surface.hpp  Window.hpp  event.hpp  keyevent.hpp  keyeventmngr.hpp  surface.hpp  window.hpp  winevent.hpp  wineventmngr.hpp  wtevent.hpp  wtkeyevent.hpp  wtkeyeventmngr.hpp  wtsurface.hpp  wtwindow.hpp  wtwinevent.hpp  wtwineventmngr.hpp
include/gamp/wt/event/: Event.hpp  KeyEvent.hpp  KeyEventMngr.hpp  PointerEvent.hpp  PointerEventMngr.hpp  WinEvent.hpp  WinEventMngr.hpp  event.hpp  keyevent.hpp  keyeventmngr.hpp  pointerevent.hpp  pointereventmngr.hpp  winevent.hpp  wineventmngr.hpp
resources/demos/glsl/: PointsShader.fp  PointsShader.vp  RedSquareShader.fp  RedSquareShader.vp  RedSquareShader2.fp  SingleLight0.fp  SingleLight0.vp  SolInSpace.fp  default.vp  fbo-mrt-1.fp  fbo-mrt-1.vp  fbo-mrt-2.fp  fbo-mrt-2.vp  gears.fp  gears.vp  landscape.fp  landscape.vp  mgl_default_xxx.fp  mgl_default_xxx.vp  ruler.fp  texsequence_xxx.fp  texsequence_xxx.vp  texture01_xxx.fp  texture02_xxx.fp
resources/impl/graph/glsl/: attributes.glsl  constants.glsl  curverenderer01-pass1-curve_simple.glsl  curverenderer01-pass1-curve_simple.glsl_jau  curverenderer01-pass1-curve_simple.orig2.glsl  curverenderer01-pass1-curve_simple.prealpha.glsl  curverenderer01-pass1-curve_weight.glsl  curverenderer01-pass1.vp  curverenderer01-pass2.vp  curverenderer01-segment-head.fp  curverenderer01-single.vp  functions.glsl  uniforms.glsl  varyings.glsl
resources/impl/util/glsl/: texture01_xxx.fp  texture01_xxx.vp
scripts/: build-clang.sh  build-preset.sh  build-wasm.sh  build.sh  rebuild-preset-doc.sh  rebuild-preset.sh  rebuild.sh  run-native-example.sh  setup-emscripten.sh
src/: CMakeLists.txt  gamp.cpp  gamp.pc.cmake  gamp_av_base.cpp  gamp_gl.cpp  gamp_gl_sdl.cpp  gamp_graph.cpp  gamp_graph_gl.cpp  gamp_sdl2.cpp  gamp_sdl2_gl.cpp  gamp_wt.cpp  sdl_subsys.cpp  wtevent.cpp
test/: CMakeLists.txt  Test_GampAVPTS.cpp  Test_VersionNumber01.cpp  test_versionnumber01.cpp
